--- a/apple.css
+++ b/apple.css
@@ -1,7 +1,7 @@
 body {
   width: 1920px;
   height: 100vh;
-  margin: 0;
+  /* margin: 10px; */
 }
 #layout {
   /* background-color: whitesmoke; */
@@ -232,6 +232,7 @@ header {
   padding-top: 50px;
 }
 .page4 {
+  margin: auto;
 }
 .ungu {
   background: linear-gradient(
@@ -242,12 +243,72 @@ header {
     #f55600 100%
   );
   margin-bottom: 20px;
+  border: none;
 }
 .sda {
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: center;
   flex-direction: column;
-
   gap: 20px;
+}
+.page5 {
+  margin-top: 150px;
+  width: 100%;
+  display: flex;
+  column-gap: 15px;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+}
+.scroll {
+  height: 668px;
+  width: 1250px;
+  color: white;
+  flex-shrink: 0;
+  font-size: 20px;
+  position: relative;
+  scroll-snap-align: center;
+  background-image: center;
+  background-size: cover;
+  display: flex;
+  justify-content: start;
+  align-items: end;
+}
+.dardag2 {
+  background-color: white;
+  color: black;
+  border-radius: 50px;
+  width: 133px;
+  height: 44px;
+  border: none;
+  margin-bottom: 40px;
+  margin-left: 50px;
+}
+.span1 {
+  margin-left: 50px;
+  font-size: 17px;
+}
+.span2 {
+  font-size: 17px;
+}
+.span3 {
+  margin-bottom: 50px;
+  font-size: 17px;
+}
+.page6 {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  color: grey;
+}
+.dardag {
+  width: 8px;
+  height: 8px;
+  opacity: 0.75;
+  margin-inline: 7px;
+  border-radius: 50%;
+  background-color: #0000006b;
+  transition: opacity ease 250ms;
 }
